updated html buttons and styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<!-- static website; no need for js for now-->
 <head>
     <!-- General meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +13,12 @@
 <body>
     <h1> My Zoo </h1>
     <!-- buttons for links (htmls) to each animal -->
-    <div class="link1">
-        <a href=""> animal1 </a>
-    </div>
-    <div class="link2">
-        <a href=""> animal2 </a>
-    </div>
-    <div class="link3">
-        <a href=""> animal3 </a>
-    </div>
-    <div class="link4">
-        <a href=""> animal4 </a>
+
+    <div id ="animalButtonArea">
+        <button id = "animal1" onclick="location.href= 'index.html'" ></button>
+        <button id = "animal2" onclick="location.href= 'index.html'" ></button>
+        <button id = "animal3" onclick="location.href= 'index.html'" ></button>
+        <button id = "animal4" onclick="location.href= 'index.html'" ></button>
     </div>
     
     <!-- Image of Typical Zoo -->
