added animal feature peccary (css+html) and edited mainpage files + READme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- buttons for links (htmls) to each animal -->
 
     <div id ="animalButtonArea">
-        <button id = "animal1" onclick="location.href= 'index.html'" ></button>
+        <button id = "animal1" onclick="location.href= 'animal1_peccary.html'" > The Peccary </button>
         <button id = "animal2" onclick="location.href= 'index.html'" ></button>
         <button id = "animal3" onclick="location.href= 'index.html'" ></button>
         <button id = "animal4" onclick="location.href= 'index.html'" ></button>
