updated animalone + index css files

--- a/animal1_peccary.html
+++ b/animal1_peccary.html
@@ -13,14 +13,14 @@
     <h3> They are found throughout Central + South America, Trinidad (The Carribeans)</h3>
     <h3> and in the North American southwest. </h3>
     <h3> Fun Fact: A group of peccarries that travel and live together </h3>
-    <h3> is called a "squadron"</h3>> 
+    <h3> is called a "squadron"</h3> 
 	
     <img src="imgs/peccary.jpg" alt="peccary_image">
     <div id="buttonArea">
 	    <button id= "mainpage" onclick= "location.href='index.html'">
             Return to the Main Page.</a>
     </div>
-    <h5> Source: </h5>
+    <h4> Source: </h4>
     <a href="https://en.wikipedia.org/wiki/Peccary">
         https://en.wikipedia.org/wiki/Peccary</a>
 </body>
