altered animal1 layout and mainpage layout

--- a/animal1_peccary.html
+++ b/animal1_peccary.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1> Peccaries: </h1>
-	<h3> Peccaries are usually medium-sized pig-like hoofed</h3>
+	<h3> Peccaries are usually medium-sized pig-like hoofed   </h3>
 	<h3> mammals of the Tayassuidae family. </h3>
-    <h3> They are found throughout Central + South America, Trinidad (The Carribeans)</h3>
-    <h3> and in the North American southwest. </h3>
-    <h3> Fun Fact: A group of peccarries that travel and live together </h3>
-    <h3> is called a "squadron"</h3> 
+    <h3> They are found throughout Central and South America, </h3> 
+    <h3> (The Carribeans) and in the North American southwest.</h3>
+    <h3> Fun Fact: A group of peccarries that travel and live </h3>
+    <h3> together is called a "squadron" </h3> 
 	
     <img src="imgs/peccary.jpg" alt="peccary_image">
     <div id="buttonArea">
