--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button id = "animal2" onclick="location.href= 'index.html'" ></button>
         <button id = "animal3" onclick="location.href= 'index.html'" ></button>
         <button id = "animal4" onclick="location.href= 'index.html'" ></button>
+        <button id = "animal5" onclick="location.href= 'index.html'" ></button>
     </div>
     
     <!-- Image of Typical Zoo -->
