--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id ="animalButtonArea">
         <button id = "animal1" onclick="location.href= 'animal1_peccary.html'" > The Peccary </button>
-        <button id = "animal2" onclick="location.href= 'index.html'" ></button>
+        <button id = "animal2" onclick="location.href= 'animal2_mandrill.html'" > The Mandrill </button>
         <button id = "animal3" onclick="location.href= 'index.html'" ></button>
         <button id = "animal4" onclick="location.href= 'index.html'" ></button>
         <button id = "animal5" onclick="location.href= 'index.html'" ></button>
