altered minpage contents (added github repo button)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <body>
     <h1> My Zoo </h1>
     <!-- buttons for links (htmls) to each animal -->
-
+    <button id = "githubrepo" onclick=
+        "location.href='https://github.com/Jamswhat2/548_WebDev_Assign1'">
+        Return to github repository.
+    </button>
     <div id ="animalButtonArea">
         <button id = "animal1" onclick="location.href= 'animal1_peccary.html'" > The Peccary </button>
         <button id = "animal2" onclick="location.href= 'animal2_mandrill.html'" > The Mandrill </button>
