added animal4 features (img+html+css) and modified mainpage button4

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button id = "animal1" onclick="location.href= 'animal1_peccary.html'" > The Peccary </button>
         <button id = "animal2" onclick="location.href= 'animal2_mandrill.html'" > The Mandrill </button>
         <button id = "animal3" onclick="location.href= 'animal3_puppy.html'" > The Puppy </button>
-        <button id = "animal4" onclick="location.href= 'index.html'" ></button>
+        <button id = "animal4" onclick="location.href= 'animal4_pig.html'" > The Pig </button>
         <button id = "animal5" onclick="location.href= 'index.html'" ></button>
     </div>
     
