--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id = "animal2" onclick="location.href= 'animal2_mandrill.html'" > The Mandrill </button>
         <button id = "animal3" onclick="location.href= 'animal3_puppy.html'" > The Puppy </button>
         <button id = "animal4" onclick="location.href= 'animal4_pig.html'" > The Pig </button>
-        <button id = "animal5" onclick="location.href= 'index.html'" ></button>
+        <button id = "animal5" onclick="location.href= 'animal5_ferret.html'" > The Ferret </button>
     </div>
     
     <!-- Image of Typical Zoo -->
